CAMBIOS SOLICITADOS POR USUARIO

--- a/src/app/login/register/register.component.html
+++ b/src/app/login/register/register.component.html
@@ -65,10 +65,10 @@
 </div>
   
    
-   
-<button pButton class="p-button-warning btn-block m-2 px-8 py-2" type="submit" 
+   <div>
+<button pButton class="p-button-warning m-2" type="submit" 
 [disabled]="!validations_form.valid || validations_form.value.terminos === false">Registrar</button>
-
+</div>
     <label>Ya tenes cuenta? <a href="#/login">Ingresar</a></label>
   </div> 
     </form>
