--- a/src/app/panel/diagnosticoGeneral/diagnostico-general/diagnostico-general.component.html
+++ b/src/app/panel/diagnosticoGeneral/diagnostico-general/diagnostico-general.component.html
@@ -126,7 +126,7 @@
         
         <ng-template pTemplate="summary">
             <tr>
-                <td>PROMEDIO CONTROL ADMINISTRATIVO:  {{ this.avg2  |number }} </td>
+                <td>PROMEDIO CONTROL OPERACIONAL:  {{ this.avg2  |number }} </td>
                </tr>
                <td *ngIf="this.avg2>2.5" bgcolor="red"> ALTO </td>
                <td *ngIf="this.avg2<1.5" bgcolor="#96FF33"> BAJO </td>
@@ -187,7 +187,7 @@
         
         <ng-template pTemplate="summary">
             <tr>
-                <td>PROMEDIO CONTROL ADMINISTRATIVO:  {{ this.avg3  |number }} </td>
+                <td>PROMEDIO CONTROL CONTABLE:  {{ this.avg3  |number }} </td>
                </tr>
                <td *ngIf="this.avg3>2.5" bgcolor="red"> ALTO </td>
                <td *ngIf="this.avg3<1.5" bgcolor="#96FF33"> BAJO </td>
@@ -245,7 +245,7 @@
         
         <ng-template pTemplate="summary">
             <tr>
-                <td>PROMEDIO CONTROL ADMINISTRATIVO:  {{ this.avg4  |number }} </td>
+                <td>PROMEDIO RIESGOS AMBIENTALES:  {{ this.avg4  |number }} </td>
                </tr>
                <td *ngIf="this.avg4>2.5" bgcolor="red"> ALTO </td>
                <td *ngIf="this.avg4<1.5" bgcolor="#96FF33"> BAJO </td>
@@ -302,7 +302,7 @@
         
         <ng-template pTemplate="summary">
             <tr>
-                <td>PROMEDIO CONTROL ADMINISTRATIVO:  {{ this.avg5  |number }} </td>
+                <td>PROMEDIO RIESGOS SOCIALES:  {{ this.avg5  |number }} </td>
                </tr>
                <td *ngIf="this.avg5>2.5" bgcolor="red"> ALTO </td>
                <td *ngIf="this.avg5<1.5" bgcolor="#96FF33"> BAJO </td>
@@ -359,7 +359,7 @@
         
         <ng-template pTemplate="summary">
             <tr>
-                <td>PROMEDIO CONTROL ADMINISTRATIVO:  {{ this.avg6  |number }} </td>
+                <td>PROMEDIO RIESGOS TECNOLÓGICOS:  {{ this.avg6  |number }} </td>
             </tr>
                 <td *ngIf="this.avg6>2.5" bgcolor="red"> ALTO </td>
                 <td *ngIf="this.avg6<1.5" bgcolor="#96FF33"> BAJO </td>
