--- a/src/app/panel/introduccion/introduccion.component.html
+++ b/src/app/panel/introduccion/introduccion.component.html
@@ -3,7 +3,7 @@
 <div class="container-fluid text-center">    
     <div class="row content">
       <div class="col-sm-3 sidenav">
-        <p><img width="300" alt="Angular Logo" src="../assets/logo.jpg">
+        <p><img width="300" alt="Angular Logo" src="../assets/logo.png">
         </p>
       </div>
       <div class="col-sm-8 text-left"> 
@@ -73,7 +73,7 @@ Calificación cuantitativa:
 
     <tr>
         <td>SI</td>
-        <td>Toda respuesta "Si" equivaldrá a 1 punto.</td>
+        <td>Toda respuesta "Sí" equivaldrá a 1 punto.</td>
     </tr>
     <tr>
         <td>SI PARCIAL</td>
@@ -193,5 +193,5 @@ calificar el nivel de control en la organización.
 </div>
 
 <footer class="container-fluid text-center">
-    <p>Hexagono 1.0</p>
+    <h1>Hexágono 1.1</h1>
   </footer>
