--- a/src/app/questions/request/request.component.html
+++ b/src/app/questions/request/request.component.html
@@ -14,8 +14,8 @@
             <tr>
            
                 <th pSortableColumn="question">No. <p-sortIcon field="id"></p-sortIcon></th>
-                <th pSortableColumn="question" >Observación <p-sortIcon field="question"></p-sortIcon></th>
-
+            <!--    <th pSortableColumn="question" >Observación <p-sortIcon field="question"></p-sortIcon></th>
+-->
     
                 <th></th>
             </tr>
@@ -34,6 +34,6 @@
 
         
       </p-table>
-      <button pButton class="p-button-warning btn-block m-1 px-15 py-2" 
+      <button pButton class="p-button-warning m-1 px-15 py-2" 
       (click)="regisPregunta(quest)" >Siguiente</button>
   </div>
