--- a/src/app/questions/request2/request2.component.html
+++ b/src/app/questions/request2/request2.component.html
@@ -16,8 +16,8 @@
                 <th pSortableColumn="question">No. <p-sortIcon field="id"></p-sortIcon></th>
                 <th pSortableColumn="question">Pregunta<p-sortIcon field="question"></p-sortIcon></th>
                 <th pSortableColumn="question">Respuesta <p-sortIcon field="question"></p-sortIcon></th>
-                <th pSortableColumn="question" >Observación <p-sortIcon field="question"></p-sortIcon></th>
-
+          <!--      <th pSortableColumn="question" >Observación <p-sortIcon field="question"></p-sortIcon></th>
+-->
     
                 <th></th>
             </tr>
@@ -37,6 +37,7 @@
 
         
       </p-table>
-      <button pButton class="p-button-warning btn-block m-2 px-10 py-2" 
+
+      <button pButton class="p-button-warning m-2 px-10 py-2" 
       (click)="regisPregunta(quest)" >Siguiente</button>
-  </div>
+    </div>
