--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -1,7 +1,7 @@
 
 <div class="container">  
     <div class="row p-3">
-      <img width="400" alt="Angular Logo" src="../assets/logo.jpg">
+      <img width="400" alt="Angular Logo" src="../assets/logo.png">
     <div class="card-header" >
    
     <div class="form"> 
