--- a/src/app/panel/panel-control/panel-control.component.html
+++ b/src/app/panel/panel-control/panel-control.component.html
@@ -1,14 +1,14 @@
 <body>
     
 <nav class="navbar navbar-expand-lg navbar-light bg-light" >
-    <a class="navbar-brand" href="#/introduccion" >Hexagono</a>
+    <a class="navbar-brand" href="#/introduccion" >Hexágono</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#/request">Comenzar<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#/request"*ngIf="isShown">Comenzar<span class="sr-only">(current)</span></a>
         </li>
 
         <div ngbDropdown class="dropdown">
@@ -17,12 +17,12 @@
           </li>
           <ul ngbDropdownMenu aria-labelledby="dropdownMenuButton1">
             <li><a ngbDropdownItem href="#/request" *ngIf="isShown">Aspectos generales del control organizacional </a></li>
-            <li><a ngbDropdownItem href="#/request2" *ngIf="isShown">Control Administrativo</a></li>
-            <li><a ngbDropdownItem href="#/request3" *ngIf="isShown">Control Operacional</a></li>
-            <li><a ngbDropdownItem href="#/request4" *ngIf="isShown">Control Contables</a></li>
-            <li><a ngbDropdownItem href="#/request5" *ngIf="isShown">Riesgos Ambientales</a></li>
-            <li><a ngbDropdownItem href="#/request6" *ngIf="isShown">Riesgos Sociales</a></li>
-            <li><a ngbDropdownItem href="#/request7" *ngIf="isShown">Riesgos Tecnológicos</a></li>
+            <li><a ngbDropdownItem href="#/request2" *ngIf="isShown2">Control Administrativo</a></li>
+            <li><a ngbDropdownItem href="#/request3"  *ngIf="isShown3">Control Operacional</a></li>
+            <li><a ngbDropdownItem href="#/request4" *ngIf="isShown4">Control Contables</a></li>
+            <li><a ngbDropdownItem href="#/request5" *ngIf="isShown5" >Riesgos Ambientales</a></li>
+            <li><a ngbDropdownItem href="#/request6" *ngIf="isShown6" >Riesgos Sociales</a></li>
+            <li><a ngbDropdownItem href="#/request7" *ngIf="isShown7">Riesgos Tecnológicos</a></li>
             
           </ul>
         </div>
@@ -32,7 +32,7 @@
             <a class="nav-link" href="#/panel-control/medicion">Tu Diagnóstico</a>
           </li>
 
-          <div ngbDropdown class="dropdown" >
+          <div ngbDropdown class="dropdown" *ngIf="isShow">
             <li ngbDropdownToggle class="btn btn-secondary" type="button" id="dropdownMenuButton1" aria-expanded="false">
           Administración
             </li>
